After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677520 - [0.11] Can't seek after EOS
[0.11] Can't seek after EOS
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
0.11.x
Other Mac OS
: Normal major
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-06 01:05 UTC by Matej Knopp
Modified: 2012-06-06 07:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matej Knopp 2012-06-06 01:05:21 UTC
Because of this commit

http://cgit.freedesktop.org/gstreamer/gstreamer/commit/?id=8cc12b05fc6fca30357830f84019ac2bde04e68c

+  if (G_UNLIKELY (GST_PAD_IS_EOS (pad)))
+    goto eos;

Is it really necessary to have this so strict? I think should be able too seek after EOS, or even send a new Segment event.
Comment 1 Wim Taymans 2012-06-06 07:17:32 UTC
commit d907544ab12ebbed5bc9c51fa0858e39e4cddebb
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Wed Jun 6 09:13:11 2012 +0200

    pad: only serialized events can't pass after EOS
    
    Only serialized events can't be sent on pads that are EOS. Otherwise a seek
    event would be refused as well.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=677520